# InvoiceFlow

./: .gitignore  Cargo.toml  README.md  db_dump.json  inspect_db.py  test_db.py
.cargo/: config.toml
.github/workflows/: release.yml
apps/desktop/: index.html  invoiceflow.key  invoiceflow.key.pub  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  build_errors.txt  errors2.txt  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src/components/: OnboardingWizard.tsx  Sidebar.tsx  ThemeToggle.tsx
apps/desktop/src/components/dashboard/: LiveFeed.tsx  QuickActions.tsx  RevenuePulse.tsx
apps/desktop/src/components/editor/: DraggableBlockWrapper.tsx  InvoiceEditor.tsx
apps/desktop/src/components/editor/blocks/: GridBlock.tsx  HeroBlock.tsx  TableBlock.tsx
apps/desktop/src/components/ui/: DownloadProgressModal.tsx  UpdaterNotification.tsx
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: About.tsx  Clients.tsx  Dashboard.tsx  Editor.tsx  Invoices.tsx  Settings.tsx
apps/desktop/src/store/: settingsStore.ts
apps/desktop/src/styles/: index.css
crates/flow-analytics/: Cargo.toml
crates/flow-analytics/src/: lib.rs
crates/flow-core/: Cargo.toml
crates/flow-core/src/: error.rs  models.rs  types.rs
crates/flow-db/: Cargo.toml
crates/flow-db/src/: database.rs  lib.rs  migrations.rs
crates/flow-db/src/repositories/: business_profile_repo.rs  client_repo.rs  invoice_repo.rs  mod.rs
crates/flow-invoice/: Cargo.toml
crates/flow-invoice/src/: calculator.rs  lib.rs  number_generator.rs
crates/flow-pdf/: Cargo.toml  error.txt
crates/flow-pdf/src/: lib.rs  template.rs
