[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/flow-core",
    "crates/flow-db",
    "crates/flow-invoice",
    "crates/flow-analytics",
    "crates/flow-pdf",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Mohammed Jabir"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
