[package]
name = "flow-analytics"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
flow-core = { path = "../flow-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
duckdb = { version = "1.0", features = ["bundled"] }
