[package]
name = "flow-db"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
flow-core = { path = "../flow-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true }
rust_decimal = { workspace = true }
